--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
   },
   "keywords": [
     "clone",
-    "ES2015 class"
+    "ES2015",
+    "es6",
+    "class"
   ],
   "author": "Miroslav Jancarik",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mjancarik/create-clone-classp/issues"
+    "url": "https://github.com/mjancarik/create-clone-class/issues"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "homepage": "https://github.com/mjancarik/create-clone-classp#readme",
+  "homepage": "https://github.com/mjancarik/create-clone-class#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.0",
+    "@babel/core": "^7.8.3",
     "@commitlint/cli": "^8.3.4",
     "@commitlint/config-conventional": "^8.3.4",
     "babel-eslint": "^10.0.3",
