--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "create-clone-class",
   "version": "0.1.0",
   "description": "The module for creating clone of ES6 class",
-  "main": "lib/createCloneClass.js",
-  "module": "es/createCloneClass.js",
+  "main": "dist/createCloneClass.cjs",
+  "module": "dist/createCloneClass.mjs",
+  "exports": {
+    "import": "./dist/createCloneClass.mjs",
+    "require": "./dist/createCloneClass.cjs"
+  },
   "scripts": {
     "preversion": "npm test && npm run lint && npm run build",
     "postversion": "npm run build && npm run changelog && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
     "lint": "node_modules/.bin/eslint -c ./.eslintrc.js --fix './**/*.{js,jsx}' --ignore-path ./.prettierignore",
+    "dev": "node_modules/.bin/rollup -c rollup.config.js --watch",
     "test": "node_modules/.bin/jest --no-watchman",
-    "build:commonjs": "cross-env NODE_ENV=cjs rollup -c -o lib/createCloneClass.js",
-    "build:es": "cross-env NODE_ENV=es rollup -c -o es/createCloneClass.js",
-    "build": "npm run build:commonjs && npm run build:es",
+    "build": "rollup -c rollup.config.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1",
     "commit": "node_modules/.bin/git-cz"
   },
@@ -35,33 +38,35 @@
   },
   "homepage": "https://github.com/mjancarik/create-clone-class#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@commitlint/cli": "^8.3.4",
-    "@commitlint/config-conventional": "^8.3.4",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-external-helpers": "^7.10.4",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-run": "^2.0.2",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-env": "^1.7.0",
-    "commitizen": "^4.0.3",
-    "conventional-changelog-cli": "^2.0.31",
-    "coveralls": "^3.0.9",
-    "cross-env": "^6.0.3",
-    "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^6.8.0",
+    "commitizen": "^4.2.1",
+    "conventional-changelog-cli": "^2.1.0",
+    "coveralls": "^3.1.0",
+    "cross-env": "^7.0.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.9.0",
     "eslint-config-last": "^0.0.5",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-jasmine": "^4.1.0",
-    "eslint-plugin-jest": "^23.6.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "husky": "^4.0.7",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "rollup": "^1.29.0",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "to-mock": "^1.5.5"
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jasmine": "^4.1.1",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "prettier": "^2.1.2",
+    "rollup": "^2.27.0",
+    "to-mock": "^1.6.2"
   },
   "jest": {
     "bail": false,
